2nd pass styling changes to main site, progress on offline build.

--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -48,6 +48,7 @@
 .carousel.single .image-holder
 {
     width: 60%;
+    background-color: #004e74;
 }
 
 .carousel.single .image-holder.outerIndicator
@@ -90,6 +91,8 @@
     transition: opacity .5s;
     color: White;
     top: 35px;
+    pointer-events: none;
+    font-weight: bold;
 }
 .pageTitle.overlay span{
     font-size: 23px;
@@ -114,12 +117,12 @@
     background-color: #004e74;
     z-index: 1;
     width: 100%;
-    height: 25px;
+    height: 36px;
     
-    opacity: .7;
+    opacity: 1;
     
     position: relative;
-    top: -64px; 
+    top: -72px; 
 }
 
 .page-indicator
@@ -135,8 +138,8 @@
 {
     display: block;
     position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
+    width: auto !important;
 }
    
 .dot
@@ -148,8 +151,8 @@
     border-color: #0098ba;
     background-color: #0098ba;
     
-    height: 10px;
-    width: 10px;
+    height: 20px;
+    width: 20px;
     
     margin-left: 5px;
     margin-right: 5px;
@@ -199,4 +202,10 @@
 .image-holder .meta-data-container{
     white-space: normal;
     width: 100%;
+}
+.carousel.single .story-game-button{
+    width: 60px;
+    height: 60px;
+    bottom: 50px;
+    right: 20px;
 }
