--- a/style/Login.css
+++ b/style/Login.css
@@ -17,7 +17,7 @@
 #register-form{
 	width: 30%;
 	min-width: 400px;
-	margin: 5px auto 20px;
+	margin: 5px auto 40px;
 }
 #login-form{
 	background-color: #0098BA;
@@ -31,6 +31,7 @@
 	text-align: left;
 	margin-bottom: 5px;
 	padding-left: 10px;
+	font-size: 1.1em;
 }
 #register-form label, #login-form label{
 	font-weight: bold;
