--- a/style/Main.css
+++ b/style/Main.css
@@ -27,10 +27,11 @@ header, footer, main{
 	width: 100%;
 }
 header{
-	height: 93px;
+	height: 90px;
 	background-color: #FFFFFF;
 	top: 0px;
-	border-bottom: 3px solid rgba(155,155,155,.5);
+	box-shadow: 0px 4px 7px rgba(0,0,0,.5);
+	
 	z-index: 100;
 }
 main{
