--- a/style/StoryPreview.css
+++ b/style/StoryPreview.css
@@ -43,3 +43,32 @@
 .story-preview .description{
 	font-size: 1em;
 }
+.story-game-button{
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	width: 35px;
+	height: 35px;
+	border: none;
+    background: none;
+    background-repeat: no-repeat;
+	background-image: url('../../img/icons/NavBar/nav_games.svg');
+    
+}
+.story-game-button a{
+	display: block;
+	height: 100%;
+	width: 100%;
+	border: none;
+    background: none;
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 0px;
+    -webkit-backface-visibility: hidden;
+	background-image: url('../../img/icons/NavBar/nav_games.svg');
+}
+.story-game-button:hover{
+	background-image: url('../../img/icons/NavBar/nav_games_hoverDown.svg');
+}
+
+
