fixed window placement bug that appeared after switching to templates

--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -306,6 +306,8 @@ header #score span
     background-color: #0098ba;
     
     transition: opacity .7s;
+    
+    float: left;
 }
 
 .bus .windows .window:hover
