--- a/style/Main.css
+++ b/style/Main.css
@@ -35,10 +35,10 @@ header{
 	z-index: 100;
 }
 main{
-	height: calc(100% - 100px);
+	height: calc(100% - 90px - 25px); /* 100% - headerHeight - footerHeight */
 	overflow: auto;
 	position: fixed;
-	top: 75px;
+	top: 90px;
 }
 footer{
 	height: 25px;
@@ -84,4 +84,30 @@ button:focus {
 	left: 50%;
 
 	transform: translate(-50%, -50%);
+}
+
+.half, 
+.third, 
+.two-thirds, 
+.quarter, 
+.three-quarters,
+.sixth{
+	float: left;
+	width: calc(50% - 20px);
+	margin: 10px;
+}
+.third{
+	width: calc((100% / 3 ) - 20px);
+}
+.two-thirds{
+	width: calc((100% * 2 / 3 ) - 20px);
+}
+.quarter{
+	width: calc((100% / 4 ) - 20px);
+}
+.three-quarters{
+	width: calc((100% * 3 / 4 ) - 20px);
+}
+.sixth{
+	width: calc((100% / 6 ) - 20px);
 }
