--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -24,6 +24,9 @@
     height: 100%;
     transition: all 2s ease 0s;
 }
+#new-stories .carousel .carousel-panel{
+    padding-bottom: 35px; 
+}
 .carousel .image-holder.outerIndicator
 {
     margin: 15px;
@@ -94,6 +97,9 @@
     pointer-events: none;
     font-weight: bold;
 }
+#new-stories .pageTitle.overlay{
+    top: 7px;
+}
 .pageTitle.overlay span{
     font-size: 23px;
 }
@@ -151,8 +157,8 @@
     border-color: #0098ba;
     background-color: #0098ba;
     
-    height: 20px;
-    width: 20px;
+    height: 17px;
+    width: 17px;
     
     margin-left: 5px;
     margin-right: 5px;
