--- a/style/Filter.css
+++ b/style/Filter.css
@@ -45,7 +45,27 @@
 #WrittenLanguageFilter, #SortByFilter{
   margin-left: 3%;
 }
-
+.filter #options{
+  background-color: #A0EAF7;
+  color: #004E74;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 18px;
+  box-shadow: 0px 4px 7px rgba(0,0,0,.5), 4px 0px 7px rgba(0,0,0,.5);
+}
+.filter #options option{
+  color: #004E74;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 18px;
+}
+.filter #options option:hover{
+  background-color: #004E74;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 18px;
+}
 .filter button img, .filter select img
 {
     height: 30px;
@@ -166,6 +186,7 @@ Thanks: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_che
     background-color: #eee;
     margin-left: 8px;
     border-radius: 25%;
+    border: 1px solid #004e74;
 }
 
 
