--- a/style/Main.css
+++ b/style/Main.css
@@ -52,6 +52,12 @@ header #language-selector{
 	right: 15px;
 	width: 175px;
 }
+button{
+	border: none;
+}
+button:hover{
+	cursor: pointer;
+}
 button:focus {
   outline: none;
 }
@@ -94,7 +100,7 @@ button:focus {
 .sixth{
 	float: left;
 	width: calc(50% - 20px);
-	margin: 10px;
+	margin: 9.99px; /*doing this because IE tend send somethings to the next line when they shouldn't be*/
 }
 .third{
 	width: calc((100% / 3 ) - 20px);
