--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -150,6 +150,18 @@ margin: 0 auto;
     width: 100%;
  
 }
+#checkMark{
+    position: absolute;
+  width: 30%;
+    margin-left: 42%;
+  top: -10%;
+    height: 7%;
+}
+#checkMarkImage{
+height 50%;
+    width: 50%;
+   
+}
 #busStop{
     width: 70%;
     margin-left:15%;
