--- a/style/viewer.css
+++ b/style/viewer.css
@@ -457,8 +457,7 @@
 /* details and social */
     #details {
         width: 50%;
-        margin-left: 25%;
-        margin-right: 25%;
+        margin: 5px auto 25px;
         text-align: left;
     }
     #title {
