--- a/style/StoryViewer.css
+++ b/style/StoryViewer.css
@@ -221,26 +221,31 @@
 #story-viewer:fullscreen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse_HoverDown.svg);}
 #story-viewer:fullscreen .story-viewer-nav{width: 80px;}
 #story-viewer:fullscreen .story-viewer-page{width: calc(100% - 220px);}
+#story-viewer:fullscreen .custom-select-options{padding-top: 5px; padding-bottom: 20px; top:initial; bottom: calc(100% - 15px);}
 
 #story-viewer:full-screen #fullscreen-toggle{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse.svg);}
 #story-viewer:full-screen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse_HoverDown.svg);}
 #story-viewer:full-screen .story-viewer-nav{width: 80px;}
 #story-viewer:full-screen .story-viewer-page{width: calc(100% - 220px);}
+#story-viewer:full-screen .custom-select-options{padding-top: 5px; padding-bottom: 20px; top:initial; bottom: calc(100% - 15px);}
 
 #story-viewer:-webkit-full-screen #fullscreen-toggle{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse.svg);}
 #story-viewer:-webkit-full-screen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse_HoverDown.svg);}
 #story-viewer:-webkit-full-screen .story-viewer-nav{width: 80px;}
 #story-viewer:-webkit-full-screen .story-viewer-page{width: calc(100% - 220px);}
+#story-viewer:-webkit-full-screen .custom-select-options{padding-top: 5px; padding-bottom: 20px; top:initial; bottom: calc(100% - 15px);}
 
 #story-viewer:-moz-full-screen #fullscreen-toggle{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse.svg);}
 #story-viewer:-moz-full-screen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse_HoverDown.svg);}
 #story-viewer:-moz-full-screen .story-viewer-nav{width: 80px;}
 #story-viewer:-moz-full-screen .story-viewer-page{width: calc(100% - 220px);}
+#story-viewer:-moz-full-screen .custom-select-options{padding-top: 5px; padding-bottom: 20px; top:initial; bottom: calc(100% - 15px);}
 
 #story-viewer:ms-fullscreen #fullscreen-toggle{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse.svg);}
 #story-viewer:ms-fullscreen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_Fullscreen_Reverse_HoverDown.svg);}
 #story-viewer:ms-fullscreen .story-viewer-nav{width: 80px;}
 #story-viewer:ms-fullscreen .story-viewer-page{width: calc(100% - 220px);}
+#story-viewer:ms-fullscreen .custom-select-options{padding-top: 5px; padding-bottom: 20px; top:initial; bottom: calc(100% - 15px);}
 
 
 .glossary
