editor style changes

--- a/style/Editor.css
+++ b/style/Editor.css
@@ -192,7 +192,7 @@ body.dragging{
 	position: relative;
 	min-height: 25%;
 
-	background-color: #004E74;
+	background-color: #0097ba;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -243,7 +243,7 @@ body.dragging{
     color: #FFFFFF !important;
 }
 .editor-content-wrapper .page-number{
-    background-color: #0097B6;
+    background-color: #004E74;
     box-shadow: 0px 0px 2px 1px #fff;
 }
 .editor-content-wrapper .page-delete-button {
@@ -267,6 +267,7 @@ body.dragging{
     box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
     font-size: 1.25em;
     cursor: pointer;
+    z-index: 1
 }
 .editor-content-wrapper .preview-breakdown > div{
 	padding-left: 25px;
@@ -282,20 +283,45 @@ body.dragging{
 }
 .editor-content-wrapper .edit-button {
     position: absolute;
-    top: 20px;
-    right: calc(50% + 10px);
-    height: 30px;
-    width: 30px;
+    top: 0px;
+    right: 50%;
+    height: 100%;
+    width: 50%;
     padding: 0px;
     border: none;
     background-image: url(../img/icons/NavBar/nav_SB.svg);
-    background-size: contain;
-    background-position: center center;
+    background-size: 30px 30px;
+    background-position: right 8px top 18px;
     margin: 0px;
 }
 .editor-content-wrapper .edit-button:hover {
 	background-image: url(../img/icons/NavBar/nav_SB_hover_selected.svg);
 }
+.editor-content-wrapper .hover-info-icon {
+	display: none;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    text-align: center;
+    height: 100%;
+    width: 50%;
+    background: #004E74E0;
+    border-radius: 10px;
+    color: #FFFFFF;
+    font-size: 4em;
+    pointer-events: none;
+}
+.hover-info-icon div{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -60%);
+}
+.page-preview:not(focus):hover + .edit-button + .preview-breakdown + .hover-info-icon{
+	display: block;
+}
+
 .editor-content-wrapper .upload-input-container{
     position: absolute;
     top: calc(100% + 10px);
@@ -536,7 +562,7 @@ body.dragging{
 	}
 	#edit-sign #video-container{
 		height: 80%;
-		background-color: #004E74;
+		background-color: #0097BA;
 		position: relative;
 	}
 	#edit-sign #video-player{
