--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -22,6 +22,10 @@ header {
     text-align: center;
     display: block;
     font-size: 120px;
+    
+    color: #0098ba;
+    font-family: "Courier New";
+    font-weight: bolder;
 }
 
 @media only screen and (max-width: 600px) {
@@ -41,29 +45,25 @@ header button {
     height: 100px;
     width: 100px;
 
-    border-radius: 50%;
-    border: 5px;
-    border-style: solid;
-    border-color: black;
-
     float: right;
+    
+    background-color: transparent;
+    border: none;
+    
+    background-image: url(../img/games/BusGame/Menu/backarrowframe.png);
+    background-size: 100% 100%;
 
-    position: relative;
-    left: 20px;
-    top: -30px;
-
-    background-color: indianred;
 }
 
 header button img {
-    height: 70%;
+    height: auto;
     width: 70%;
 }
 
 header #backBtn img {
     position: relative;
-    top: 10px;
-    left: -9px;
+    top: -5px;
+    left: 5px;
 }
 
 main {
@@ -152,6 +152,9 @@ main {
 
     height: auto;
     width: 100%;
+    
+    position: relative;
+    left: -5%;
 
 }
 
@@ -182,19 +185,19 @@ main {
 header #score {
     float: left;
 
-    position: relative;
-    left: -20px;
-    top: -30px;
-
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
     color: white;
+    
+    background-image: url(../img/games/BusGame/Menu/scoreframe.png);
+    
 }
 
 header #score span {
+    
     position: relative;
-    top: 5px;
-    left: 3px;
+    left: -8px;
+    top: -8px;
 }
 
 /* Core Game: lanes*/
@@ -361,6 +364,8 @@ header #score span {
     color: white;
     font-size: 50px;
     height: 100%;
+    
+    padding: 6px;
 
     text-align: center;
 
