--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -52,6 +52,8 @@ header button {
     
     background-image: url(../img/games/BusGame/Menu/backarrowframe.png);
     background-size: 100% 100%;
+    
+    font-family: "Arial Rounded MT Bold";
 
 }
 
